# workshop-qualidade-dados

./: README.md  inferred_schema.py  pyproject.toml
.github/workflows/: CI.yml
app/: etl.py  etl_infer_schema.py  funcao_ola_turma.py  ler_duckdb.py  schema.py  schema_email.py
docs/: index.md
exemplo/: exemplo.py  exemplo01.py  exemplo02.py  exemplo02_pandera.py  exemplo03_pydantic.py  exemplo_pydantic.py
sql/: create_table_produtos_bronze.sql  create_table_produtos_bronze_email.sql  create_wrong_values_into_tabela_bronze.sql  insert_into_tabela_bronze.sql  insert_into_tabela_bronze_email.sql
tests/: test_func_etl.py  teste_funcao_ola_turma.py
