[tool.poetry]
name = "workshop-data-quality"
version = "0.1.0"
description = ""
authors = ["Thiago Ferraz <thiagovdferraz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
mkdocs = "^1.6.1"
mkdocs-mermaid2-plugin = "^1.2.1"
mkdocs-material = "^9.5.44"
mkdocstrings = "^0.27.0"
taskipy = "^1.14.0"
isort = "^5.13.2"
black = "^24.10.0"
pytest = "^8.3.3"
tqdm = "^4.67.0"
pandera = {extras = ["io"], version = "^0.21.0"}
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
duckdb = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = """
isort .
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/main.py
"""
doc = "mkdocs serve"